--- a/html/InvOverview.html
+++ b/html/InvOverview.html
@@ -1,10 +1,9 @@
-
 <b>Inferences?</b> inferences using statistical testing are, of course, subject to errors.
-<ul style=margin:0px;>',
-<li> False hits',
-<li> False misses',
-</ul>',
-How much do these matter?',
+<ul style=margin:0px;>
+<li> False hits
+<li> False misses
+</ul>
+How much do these matter?
 <br>
 <br>
 <b>Strategies?</b> a researcher has to make an important choice about sample size because larger sample sizes are more costly. 
@@ -26,5 +25,4 @@ Which is better?
 <li> In this case, replication is highly problematical.
 <li> Meta-analysis for random effects, however, is good.
 </ul>
-<br>'
-           )
+<br>
